avance css index

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Publicación de Resultados Electorales</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
-
+    <link rel="stylesheet" href="css/common.css"/>
 </head>
 
 <body>
@@ -17,14 +16,15 @@
         <!--Barra de logo portal-->
         <div class="header-page">
             <a href="index.html">
-                <img src="img/icons/favicon-16x16.png" alt="logo" class="logo" href="index.html">Dirección Nacional <br>
-                Electoral
+                <img src="img/DINE.jpg" alt="logo" class="logo" href="index.html">
+                <h1 id="titulo-cabecera"> Dirección Nacional <br>Electoral
             </a>
         </div>
         <!--Barra de menú principal-->
-
-        <a class="active" href="informes.html">Informes</a>
-        <a href="#contact">Contacto</a>
+        <div class="segunda-cabecera">
+            <a class="active" href="informes.html">INFORMES</a> 
+            <!--- <a href="#contact">Contacto</a> ESTO NO SE DONDE IRIA, PORQUE NO APARECE EN NINGUNA IMAGEN.-->
+        </div>
 
     </header>
     <!-- Contenido principal de la página -->
@@ -114,7 +114,7 @@
     </main>
     <!--Pie de página-->
     <footer>
-        <p>Desarrollado con actitud :p - LDCII</p>
+        <p id="texto-footer">Resultados Provisorios en base a telegramas recibidos (Art. 43 Ley 26571 y Art. 105 Ley 19945). Los porcentajes de las agrupaciones políticas son calculados sobre los votos válidos (PASO) conforme al art. 45 Ley 26.571 y afirmativos (Generales). No se incluyen los votos correspondientes a los electores residentes en el exterior ni privados de la libertad. Al usar este sitio usted acepta los <a>Términos y Condiciones</a>.</p>
     </footer>
 </body>
 
