--- a/informes.html
+++ b/informes.html
@@ -9,6 +9,7 @@
 
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="CSS/informes.css"/>
 </head>
 
 <body>
@@ -17,22 +18,21 @@
         <!--Barra de logo portal-->
         <div class="header-page">
             <a href="index.html">
-                <img src="img/icons/favicon-16x16.png" alt="logo" class="logo"> Dirección Nacional<br>
+                <img src="img/icons/favicon-16x16.png" alt="logo" class="logo"> 
+                <p class="dir">Dirección Nacional<br>
                 Electoral
+                </p>
             </a>
         </div>
         <!--Barra de menú principal-->
 
-        <a class="active" href="#informes">Informes</a>
-        <a href="#contact">Contacto</a>
-        <br>
-        <p>CONSULTAR</p>
+        <!--<a class="active" href="#informes">Informes</a>
+        <a href="#contact">Contacto</a>-->
         <nav>
-            <ul>
-                <li><a href="paso.html">PASO</a></li>
-                <li><a href="generales.html">GENERAL</a></li>
-                <li><a href="index.html">INICIO</a></li>
-            </ul>
+            <p>CONSULTAR</p>
+            <a href="paso.html" class="paso">PASO</a></li>
+            <a href="generales.html" class="gen">GENERAL</a></li>
+            <a href="index.html" class="inicio">INICIO</a></li> 
         </nav>
 
     </header>
