--- a/informes.html
+++ b/informes.html
@@ -20,7 +20,7 @@
         <!--Barra de logo portal-->
         <div class="header-page">
             <a href="index.html">
-                <img src="img/icons/favicon-16x16.png" alt="logo" class="logo"> 
+                <img src="img/DINE.jpg" alt="logo" class="logo"> 
                 <p class="dir">Dirección Nacional<br>
                 Electoral
                 </p>
