--- a/generales.html
+++ b/generales.html
@@ -18,13 +18,12 @@
         <!--Barra de logo portal-->
         <div class="header-page">
             <a href="index.html">
-                <img src="img/icons/favicon-16x16.png" alt="logo" class="logo">Dirección Nacional<br>
-                Electoral
+                <img src="img/Logo_DINE_negativo.png" alt="logo" class="logo" href="index.html">
             </a>
         </div>
         <!--Barra de menú principal-->
 
-        <div class="menu-principal">
+        <div class="segunda-cabecera">
 
             <div class="desplegables">
                 <select id="filtro-año">
@@ -43,7 +42,7 @@
             <button id="boton-filtro"><i class="fa-solid fa-search"></i><span
                     class="texto-boton"></span>Filtrar</button>
             <a class="active" href="informes.html">Informes</a>
-            <a href="#contact">Contacto</a>
+            <!--<a href="#contact">Contacto</a>-->
             <a href="index.html"><button id="boton-inicio">Inicio</button></a>
 
         </div>
@@ -55,6 +54,11 @@
     <main>
         <section id="sec-titulo">
             <!--Seccion para agregar una palicula favorita por codigo-->
+            <div class="container">
+                <div class="mensaje-1"><i class="fa-solid fa-thumbs-up"></i>Se agregó con éxito el resultado al informe.</div>
+                <div class="mensaje-2"><i class="fa-solid fa-exclamation-triangle"></i>Error: Se produjo un error al intentar agregar resultados al informe.</div>
+                <div class="mensaje-3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
+            </div>
             <h2>Elecciones 2021 | Generales</h2>
             <p>Párrafo o subtítulo</p>
             <div>Imagen</div>
