--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/pages/common.css"/>
 </head>
 
 <body>
