--- a/informes.html
+++ b/informes.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="CSS/informes.css" />
+    <link rel="stylesheet" href="CSS/pages/common.css" />
+    <link rel="stylesheet" href="CSS/pages/informes.css" />
 </head>
 
 <body>
