--- a/informes.html
+++ b/informes.html
@@ -83,7 +83,6 @@
                                 <tr>
                                     <td>
                                         <div class="mesas-comp">
-                                            <p>Mesas computadas</p>
                                             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                 width="841.889px" height="595.281px" viewBox="0 0 841.889 595.281"
@@ -129,11 +128,13 @@
                                                     </path>
                                                 </g>
                                             </svg>
+                                            <div class="mesas-comp1"><p>Mesas computadas</p>
+                                            <p>62.71%</p>
+                                            </div>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="elec">
-                                            <p>Electores</p>
                                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                 width="841.889px" height="595.281px" viewBox="0 0 841.889 595.281"
@@ -223,11 +224,13 @@
                                                     c-0.238-0.571-0.797-0.944-1.416-0.944l0,0c-4.601,1.534-7.55-4.364-8.966-9.319c-2.595-10.027-1.18-14.864,0.473-17.105H180.521z">
                                                 </path>
                                             </svg>
+                                            <div class="elec1"><p>Electores</p><br>
+                                            <p>62.71%</p>
+                                            </div>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="part-esc">
-                                            <p>Participacion sobre escrutado</p>
                                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                 width="841.889px" height="595.281px" viewBox="0 0 841.889 595.281"
@@ -289,16 +292,27 @@
                                                     height="14.393">
                                                 </rect>
                                             </svg>
+                                            <div class="part-esc1"><p>Participacion sobre escrutado</p>
+                                            <p>62.71%</p>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
                             </table>
                         </td>
-                        <td class="agrupacion">
-                            <p>FRENTE DE TODOS</p> <br>
-                            <p>FRENTE DE IZQUIERDA Y TRABAJADORES</p>
-                            <br>
-                            <p>hola</p>
+                        <td>
+                            <table class="tab-1">
+                                <tbody class="anid">
+                                    <tr>
+                                        <td>JUNTOS</td>
+                                        <td class="sep">38% <br> 30000 votos</td>
+                                    </tr>
+                                    <tr>
+                                        <td>PJ</td>
+                                        <td class="sep1">20% <br> 30000 votos</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                         </td>
                     </tr>
                 </tbody>
