--- a/informes.html
+++ b/informes.html
@@ -24,14 +24,14 @@
         </div>
         <!--Barra de menú principal-->
 
-        <!--<a class="active" href="#informes">Informes</a>
-        <a href="#contact">Contacto</a>-->
-        <nav>
-            <p>CONSULTAR</p>
+        <div class="segunda-cabecera">
+            <a class="active4">CONSULTAR:</a>
             <a href="paso.html" class="paso">PASO</a></li>
-            <a href="generales.html" class="gen">GENERAL</a></li>
-            <a href="index.html" class="inicio">INICIO</a></li>
-        </nav>
+            <a href="generales.html" class="gen">GENERALES</a></li>
+            <div class="contenedor-boton-inicio">
+                <a href="index.html"><button id="boton-inicio">Inicio</button></a>
+            </div>
+        </div>
 
     </header>
     <!-- Contenido principal de la página -->
@@ -44,12 +44,12 @@
                 <div class="mensaje-2"><i class="fa-solid fa-exclamation-triangle"></i>Error: Se produjo un error al intentar agregar resultados al informe.</div>
                 <div class="mensaje-3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
             </div>
-            <h1>  Reporte de Elecciones</h1>
+            <h2>Reporte de Elecciones</h2>
         </section>
         <section id="sec-contenido">
 
             <table class="General">
-                <thead>
+                <thead class="cabeza-tabla">
                     <tr class="celdas1">
                         <th rowspan="4">PROVINCIA</th>
                         <th>ELECCIÓN</th>
