--- a/informes.html
+++ b/informes.html
@@ -44,11 +44,11 @@
                 <div class="mensaje-2"><i class="fa-solid fa-exclamation-triangle"></i>Error: Se produjo un error al intentar agregar resultados al informe.</div>
                 <div class="mensaje-3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
             </div>
-            <h1>  Reporte de Elecciones</h1>
+            <h1 class="reporte">Reporte de Elecciones</h1>
         </section>
         <section id="sec-contenido">
 
-            <table class="General">
+            <table class="general">
                 <thead>
                     <tr class="celdas1">
                         <th rowspan="4">PROVINCIA</th>
@@ -128,8 +128,7 @@
                                                     </path>
                                                 </g>
                                             </svg>
-                                            <div class="mesas-comp1"><p>Mesas computadas</p>
-                                            <p>62.71%</p>
+                                            <div class="mesas-comp1"><p>Mesas computadas<br>62.71%</p>
                                             </div>
                                         </div>
                                     </td>
@@ -224,8 +223,7 @@
                                                     c-0.238-0.571-0.797-0.944-1.416-0.944l0,0c-4.601,1.534-7.55-4.364-8.966-9.319c-2.595-10.027-1.18-14.864,0.473-17.105H180.521z">
                                                 </path>
                                             </svg>
-                                            <div class="elec1"><p>Electores</p><br>
-                                            <p>62.71%</p>
+                                            <div class="elec1"><p>Electores<br>62.71%</p>
                                             </div>
                                         </div>
                                     </td>
@@ -292,8 +290,7 @@
                                                     height="14.393">
                                                 </rect>
                                             </svg>
-                                            <div class="part-esc1"><p>Participacion sobre escrutado</p>
-                                            <p>62.71%</p>
+                                            <div class="part-esc1"><p>Participacion sobre escrutado<br>62.71%</p>
                                             </div>
                                         </div>
                                     </td>
@@ -304,11 +301,11 @@
                             <table class="tab-1">
                                 <tbody class="anid">
                                     <tr>
-                                        <td>JUNTOS</td>
+                                        <td><b>JUNTOS</b></td>
                                         <td class="sep">38% <br> 30000 votos</td>
                                     </tr>
                                     <tr>
-                                        <td>PJ</td>
+                                        <td><b>PJ</b></td>
                                         <td class="sep1">20% <br> 30000 votos</td>
                                     </tr>
                                     </tbody>
