--- a/paso.html
+++ b/paso.html
@@ -7,7 +7,7 @@
     <title>Sistema de Publicación de Resultados Electorales</title>
     <link rel="shortcut icon" type="image/png" href="img/icons/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+    <script src="js/paso.js" defer></script>
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="CSS/common.css" />
     <link rel="stylesheet" href="CSS/pages/paso.css" />
