--- a/generales.html
+++ b/generales.html
@@ -35,6 +35,10 @@
                 <select id="filtro-distrito">
                     <option selected disabled>Distrito</option>
                 </select>
+                <input type="hidden" id="hdSeccionProvincial" name="hdSeccionProvincial">
+                <select id="filtro-seccion">
+                    <option selected disabled>Sección</option>
+                </select>
             </div>
 
 
