--- a/paso.html
+++ b/paso.html
@@ -62,11 +62,11 @@
             <!--Seccion para agregar una palicula favorita por codigo-->
 
             <div class="container">
-                <div class="mensaje-1"><i class="fa-solid fa-thumbs-up"></i>Se agregó con éxito el resultado al informe.
+                <div class="mensaje-1" id="men1"><i class="fa-solid fa-thumbs-up"></i>Se agregó con éxito el resultado al informe.
                 </div>
-                <div class="mensaje-2"><i class="fa-solid fa-exclamation-triangle"></i>Error: Se produjo un error al
+                <div class="mensaje-2" id="men2"><i class="fa-solid fa-exclamation-triangle"></i>Error: Se produjo un error al
                     intentar agregar resultados al informe.</div>
-                <div class="mensaje-3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
+                <div class="mensaje-3" id="men3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
             </div>
             <h2>Elecciones 2021 | Paso</h2>
             <p>2020 > Generales > Provisorio > Senadores Nacionales > Buenos Aires</p>
