Titulo y subtitulo Generales

--- a/generales.html
+++ b/generales.html
@@ -66,8 +66,8 @@
                     intentar agregar resultados al informe.</div>
                 <div class="mensaje-3" id="men3"><i class="fa-solid fa-exclamation"></i>La operación no se pudo completar.</div>
             </div>
-            <h2>Elecciones 2021 | Generales</h2>
-            <p>2020 > Generales > Provisorio > Senadores Nacionales > Buenos Aires</p>
+            <h2 id="titulo-elecciones">Elecciones 2021 | Generales</h2>
+            <p id="subtitulo-elecciones">2020 > Generales > Provisorio > Senadores Nacionales > Buenos Aires</p>
 
         </section>
         <section id="sec-contenido">
