cartel pantalla de carga requerimiento extra

--- a/generales.html
+++ b/generales.html
@@ -58,7 +58,11 @@
     <!-- Contenido principal de la página -->
     <main>
         <section id="sec-titulo">
-            <!--Seccion para agregar una palicula favorita por codigo-->
+
+            <!-- cartel para contemplar pantalla de carga -->
+            
+            <div id="cartel-carga">Cargando...</div>
+       
             <div class="container">
                 <div class="mensaje-1" id="men1"><i class="fa-solid fa-thumbs-up"></i>Se agregó con éxito el resultado al informe.
                 </div>
