--- a/generales.html
+++ b/generales.html
@@ -142,7 +142,7 @@
 
                                     <div id="textos-recuadros">
                                         <p>Mesas escrutadas
-                                        <div id="textos-recuadros-2">62.71%</div>
+                                        <div id="1textos-recuadros-2">62.71%</div>
                                         </p>
                                     </div>
                                 </svg>
@@ -240,7 +240,7 @@
                                 </svg>
                                 <div id="textos-recuadros">
                                     <p>Electores
-                                    <div id="textos-recuadros-2">62.71%</div>
+                                    <div id="2textos-recuadros-2">62.71%</div>
                                     </p>
                                 </div>
                         </td>
@@ -303,7 +303,7 @@
                                 </svg>
                                 <div id="textos-recuadros">
                                     <p>Participación sobre escrutado
-                                    <div id="textos-recuadros-2">62.71%</div>
+                                    <div id="3textos-recuadros-2">62.71%</div>
                                     </p>
                                 </div>
                             </div>
